--- a/front-quiz/src/index.css
+++ b/front-quiz/src/index.css
@@ -5,3 +5,13 @@
 body {
   @apply font-myfont;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
